--- a/MoviesOMDBApp/View/Base.lproj/Main.storyboard
+++ b/MoviesOMDBApp/View/Base.lproj/Main.storyboard
@@ -44,27 +44,40 @@
                                             <rect key="frame" x="0.0" y="0.0" width="172" height="161"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3j-vB-rdQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="172" height="128"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CoB-v9-7QS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="172" height="161"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3j-vB-rdQ">
+                                                            <rect key="frame" x="0.0" y="8" width="172" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="128" id="oTT-pG-wTH"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqk-EC-in2">
+                                                            <rect key="frame" x="8" y="142" width="156" height="19"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="128" id="ZXu-Qd-Y4P"/>
+                                                        <constraint firstItem="M3j-vB-rdQ" firstAttribute="top" secondItem="CoB-v9-7QS" secondAttribute="top" constant="8" id="IAY-kT-3Ev"/>
+                                                        <constraint firstItem="tqk-EC-in2" firstAttribute="leading" secondItem="CoB-v9-7QS" secondAttribute="leading" constant="8" id="RNA-eo-k3m"/>
+                                                        <constraint firstItem="tqk-EC-in2" firstAttribute="top" secondItem="M3j-vB-rdQ" secondAttribute="bottom" constant="6" id="Sur-hH-Y88"/>
+                                                        <constraint firstAttribute="trailing" secondItem="M3j-vB-rdQ" secondAttribute="trailing" id="b6t-Zz-PT3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="tqk-EC-in2" secondAttribute="trailing" constant="8" id="iTL-ZV-fbe"/>
+                                                        <constraint firstItem="M3j-vB-rdQ" firstAttribute="leading" secondItem="CoB-v9-7QS" secondAttribute="leading" id="lIY-xK-DQi"/>
+                                                        <constraint firstItem="tqk-EC-in2" firstAttribute="top" secondItem="M3j-vB-rdQ" secondAttribute="bottom" constant="6" id="ndz-im-Nk8"/>
+                                                        <constraint firstAttribute="bottom" secondItem="tqk-EC-in2" secondAttribute="bottom" id="nyg-Jm-eKZ"/>
                                                     </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqk-EC-in2">
-                                                    <rect key="frame" x="8" y="132" width="156" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="tqk-EC-in2" firstAttribute="leading" secondItem="fho-4b-ygo" secondAttribute="leading" constant="8" id="Gks-fo-Fr2"/>
-                                                <constraint firstItem="M3j-vB-rdQ" firstAttribute="leading" secondItem="fho-4b-ygo" secondAttribute="leading" id="S9z-Xa-VSg"/>
-                                                <constraint firstItem="tqk-EC-in2" firstAttribute="top" secondItem="M3j-vB-rdQ" secondAttribute="bottom" constant="4" id="beE-Si-2zG"/>
-                                                <constraint firstAttribute="bottom" secondItem="tqk-EC-in2" secondAttribute="bottom" constant="8" id="dVj-66-bme"/>
-                                                <constraint firstItem="M3j-vB-rdQ" firstAttribute="top" secondItem="fho-4b-ygo" secondAttribute="top" id="e3a-if-2q2"/>
-                                                <constraint firstAttribute="trailing" secondItem="M3j-vB-rdQ" secondAttribute="trailing" id="gYZ-eS-ZjX"/>
-                                                <constraint firstAttribute="trailing" secondItem="tqk-EC-in2" secondAttribute="trailing" constant="8" id="y8S-60-Zcn"/>
+                                                <constraint firstAttribute="trailing" secondItem="CoB-v9-7QS" secondAttribute="trailing" id="G58-s0-jXL"/>
+                                                <constraint firstItem="CoB-v9-7QS" firstAttribute="top" secondItem="fho-4b-ygo" secondAttribute="top" id="JXg-ud-Slv"/>
+                                                <constraint firstAttribute="bottom" secondItem="CoB-v9-7QS" secondAttribute="bottom" id="iAN-PC-whi"/>
+                                                <constraint firstItem="CoB-v9-7QS" firstAttribute="leading" secondItem="fho-4b-ygo" secondAttribute="leading" id="z6N-nB-rEn"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="172" height="161"/>
@@ -124,7 +137,7 @@
         <!--Movie Details View Controller-->
         <scene sceneID="atD-oF-QLB">
             <objects>
-                <viewController storyboardIdentifier="ViewController" id="m1l-Xu-wgB" customClass="MovieDetailsViewController" customModule="MoviesApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="m1l-Xu-wgB" customClass="MovieDetailsViewController" customModule="MoviesOMDBApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hzw-I6-1k6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -133,7 +146,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryAndSynopsisTableViewCell" rowHeight="238" id="7cP-yz-xxm" customClass="CategoryAndSynopsisTableViewCell" customModule="MoviesApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryAndSynopsisTableViewCell" rowHeight="238" id="7cP-yz-xxm" customClass="CategoryAndSynopsisTableViewCell" customModule="MoviesOMDBApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="238"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7cP-yz-xxm" id="KcX-rE-Vlu">
@@ -289,7 +302,7 @@
                                             <outlet property="sypnopisDetails" destination="kG3-DE-gap" id="mGc-eM-tqA"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DirectorWriterAutherTableViewCell" rowHeight="146" id="mAh-aX-YUB" customClass="DirectorWriterAutherTableViewCell" customModule="MoviesApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DirectorWriterAutherTableViewCell" rowHeight="146" id="mAh-aX-YUB" customClass="DirectorWriterAutherTableViewCell" customModule="MoviesOMDBApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="282.5" width="414" height="146"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mAh-aX-YUB" id="Y0H-2a-sAb">
