Update constraints for imageview in MovieListviewcontroller.

--- a/MoviesOMDBApp/View/Base.lproj/Main.storyboard
+++ b/MoviesOMDBApp/View/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CoB-v9-7QS">
                                                     <rect key="frame" x="0.0" y="0.0" width="172" height="161"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3j-vB-rdQ">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3j-vB-rdQ">
                                                             <rect key="frame" x="0.0" y="8" width="172" height="128"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="128" id="oTT-pG-wTH"/>
